# responder

./: .gitignore  CMakeLists.txt  README.md
config/: example.env.ini  example.telegram.token
include/: bot.h  environment.h  handler.h  log.h  mememaker.h
src/app/: CMakeLists.txt  bot.cpp  handler.cpp  log.cpp  log.h  main.cpp  mememaker.cpp
